<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_chatgpt_24dp"
            android:tint="@color/white"
            app:civ_circle_background_color="@color/gray" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/blue_25" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/menu"
            android:textColor="@color/blue" />

        <LinearLayout
            android:id="@+id/ll_riwayat_generate_image"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_round_art_track_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/generate_image_history"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_update_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_round_password_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/update_password"
                android:textColor="@color/black" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>