<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.generate_image.GenerateImageFragment">

    <LinearLayout
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_prompt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_prompt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/hint_prompt"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="Hasil gambar mungkin tidak terlalu akurat!" />

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/generate"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:indeterminate="true"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"
            android:src="@color/gray" />

    </LinearLayout>

</ScrollView>